# Power-Comparison

./: .gitignore  README.md  Roadmap.md  contact_energy_downloader.py  data_plotter.py  data_processor.py  main.py  power_comparison.py  pyproject.toml  requirements.txt  shell.nix  statistics_generator.py  usage_plotter.py
config/: credentials.env.example
legacy/: contact_energy_downloader.py  data_processor.py  usage_plotter.py
planning/: Class Diagram.plantuml  Roadmap.md  Use Cases.md
power_comparison/: __init__.py  __main__.py  app.py  config.py  connector.py  connector_utility.py  controller.py  data.py  default_values_utility.py  view.py
power_comparison/connectors/: __init__.py  connector.py  contact_energy_connector.py
profiles/: example.csv
profiles/Christchurch-Apr-2024/: Contact-Low-Good-Charge.csv  Contact-Standard-Good-Weekends.csv  Contact-Standard-Simple.csv  Electric-Kiwi-Low-Movemaster.csv  Electric-Kiwi-Standard-Movemaster.csv  Electric-Kiwi-Standard-Powershifter.csv  Flick-Low-Off-Peak.csv  Flick-Standard-Flat.csv  Flick-Standard-Off-Peak.csv  Frank.csv  Genesis-Low-Basic.csv  Genesis-Low-Plus.csv  Genesis-Standard-Basic.csv  Genesis-Standard-Plus.csv  Mercury-Low-Inclusive-Open.csv  Meridian-Simple-Flexi.csv
src/: ContactEnergyDownloader.py  DataProcessor.py  DefaultValues.py  StatisticsGenerator.py
src/ContactEnergyDownloader/: main.py
src/DataProcessor/: main.py
src/StatisticsGenerator/: main.py
src/power_comparison/: __main__.py  app.py  controller.py  data.py  default_values_utility.py  plan_comparison_screen.py  tkinter_figure.py  usage_view_screen.py  view.py
src/power_comparison/connectors/: __init__.py  blank.py  connector.py  contact_energy_connector.py
src/power_comparison/profiles/Christchurch-Apr-2024/: Contact-Low-Good-Charge.csv  Contact-Low-Good-Nights.csv  Contact-Low-Good-Weekends.csv  Contact-Low-Simple.csv  Contact-Standard-Good-Charge.csv  Contact-Standard-Good-Nights.csv  Contact-Standard-Simple.csv  Electric-Kiwi-Low-Kiwi.csv  Electric-Kiwi-Low-Powershifter.csv  Electric-Kiwi-Low-Prepay-300.csv  Electric-Kiwi-Standard-Kiwi.csv  Electric-Kiwi-Standard-Movemaster.csv  Electric-Kiwi-Standard-Prepay-300.csv  Flick-Low-Flat.csv  Flick-Low-Off-Peak.csv  Flick-Standard-Off-Peak.csv  Frank.csv  Genesis-Standard-Flexi.csv  Mercury-Standard-Inclusive-Open.csv  Nova-Low.csv  Nova-Standard.csv  Octopus-Energy-Low.csv  Octopus-Energy-Standard.csv
src/power_comparison/profiles/Christchurch-Dec-2024/: Contact-Low-Good-Weekends.csv  Contact-Low-Simple.csv  Contact-Standard-Good-Charge.csv  Contact-Standard-Good-Weekends.csv  Electric-Kiwi-Low-Kiwi.csv  Electric-Kiwi-Low-Movemaster.csv  Flick-Low-Off-Peak.csv  Flick-Standard-Flat.csv  Mercury-Standard-Inclusive-Open.csv
src/power_comparison/theme/: pc-yellow.json
