[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "power-comparison"
dynamic = ["version"]
authors = [{ name = "Justin Muirhead" }]
description = "Application to compare power plan prices."
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
]
dependencies = [
    "contact-energy-nz>=0.1.10357010196",
    "numpy >= 2",
    "matplotlib >= 3",
    "aiohttp >= 3",
    "async-timeout >= 4",
    "platformdirs >= 4",
    "customtkinter >= 5",
    "CTkMessagebox >= 2",
    "pillow >= 10",
]
requires-python = ">= 3.9"

[project.urls]
Repository = "https://github.com/hdert/Power-Comparison.git"
Issues = "https://github.com/hdert/Power-Comparison/issues"

[project.gui-scripts]
power-comparison = "power_comparison.app:main"

[tool.black]
line-length = 79

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
venv = ".venv"
venvPath = "."
